third_party/move/move-compiler-v2/tests/checking/dotdot/assign.exp

Diagnostics:
error: invalid assignment
   ┌─ tests/checking/dotdot/assign.move:12:3
   │
12 │         S1(a, b) = x;
   │         ^^^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment
